# BookTrackerPro

./: .replit  Pasted-modules-python-3-11-nix-channel-stable-24-05-workflows-runButton-Project-work-1727613808199.txt  add_books_to_list.py  add_sample_authors.py  app.py  check_db_contents.py  check_import.py  check_json_fields.py  config.py  create_test_user.py  export_database.py  import_authors_and_books.py  import_data.py  import_google_info.py  import_librarything.py  import_lists.py  import_translations.py  manual_data_migration.py  messages.pot  models.py  package-lock.json  package.json  pyproject.toml  replit.nix  reset_migration.py  test_author_detail.py  test_db_connection.py  utils.py
instance/: app.db
migrations/versions/: 18193fa55da6_add_reading_goals.py  20b650e5cca0_update_book_model_and_add_translation_.py  21ab5f2fa886_add_rating_and_review_to_userbook_model.py  25cc5cfb32dc_add_user_id_to_lists_table.py  46e03495dad1_add_profile_image_column_to_user_model.py  5a9c3a865368_create_userbook_association_table.py  663b06fcb7dc_add_image_url_to_author_model.py  860fa043a6c8_add_translation_model_and_update_.py  894eb2291575_add_date_joined_column_to_user_model.py  8f6c6c4dc68e_add_is_admin_field_to_user_model.py  91954681ae2a_add_translation_model_and_update_.py  convert_string_to_json.py  (+7 more)
routes/: __init__.py  author_routes.py  book_routes.py  goal_routes.py  home_routes.py  list_routes.py
templates/: author_detail.html  base.html  book_detail.html  edit_profile.html  index.html  login.html  my_read_books.html  profile.html  register.html
(+36 files in other folders)
