[tool.poetry]
name = "repl-nix-booktrackerpro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-sqlalchemy = "^3.1.1"
flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
flask-cors = "5.0.0"
flask-login = "^0.6.3"
flask-migrate = "^4.0.7"
flask-talisman = "^1.1.0"
cryptography = "^43.0.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.35"
werkzeug = "^3.0.4"
pymysql = "^1.1.1"
undetected-chromedriver = "^3.5.5"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
